app/assets/stylesheets/projects.scss
//
// $font-stack:    Helvetica, sans-serif;
// $black: #000000;
// $red_trans: rgba(230, 39, 57, 0.63);
// $grey: #808080;
// $darker_grey: #c9c9c9;
// $light_grey: #e3e3e3;
// $light-grey_trans: rgba(227, 227, 227, 0.5);
// $light_blue_trans: rgba(154, 211, 222, 0.5);
// $pink: #fd5c63;
// $pink_trans: rgba(253, 92, 99, 0.6);

*,
*:before,
*:after {
  box-sizing: border-box;
}

html, body {
  height: 100vh;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}


.top-container{
  width: 60vw;
  margin-left: 20vw;
  margin-right: 20vw;
}

nav {
  width: auto;
  position: fixed;
  top: 0;
  left: 0;
  margin: 0;
  background-color: $greyTrans;
  width: 100%;
  height: 60px;



   ul {
     display: flex;
     justify-content: flex-end;

   }
   li {
  // display: inline-flex;
  // justify-content: space-around;
  display: inline-flex;
  flex-direction: row;
  letter-spacing: 7px;
  padding: 5px 15px;
  list-style-type: none;
  // margin-right: 100px;
  width: 15%;
  font-size: 0.8rem;

  }

  a {
    justify-content: flex-end;
    position: absolute;
  }

  a:hover {
    border-bottom: 2px solid $black;
    text-decoration: none;
  }

}
// svg text{
//   alignment-baseline: middle;
//
// }


#hamburger,
#cross {
  position: fixed;
  top: 2%;
  right: 10%;
  z-index: 100;
  width: 25px;
  height: 25px;
  display: none;
}

.my_info{
  flex-direction: column;
  // justify-content: center;
  text-align: center;
  // margin-top: 13rem;

  // height: 500px;
  margin-right: -300px;
  font-family: sans-serif;
  letter-spacing: 5px;
  color: $black;
  font-size: 0.9rem;

}

.my_info h1{
  margin-top: 150px;
  font-size: 50px;
  letter-spacing: 15px;
}

.my_info a,
a:link,
a:hover,
a:visited,
a:active{
  color: $black;
  text-decoration: none;
}

.contact{
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-right: -300px;
  padding-bottom: 70px;
  margin-top: 3rem;

    a:hover {
      background-color: $greyTrans;
    }
}

.contact_list{
  border: 2px solid black;
  width: 100px;
  height: 40px;
  text-align: center;
  margin-top: 0px;
  color: black;
  padding: 10px;
  margin-right: 10px;
  font-size: 0.9rem;
  font-weight: bold;
  margin-bottom: 150px;

}

.programmer {
  background-color: $black;
  color: $white;
  height: 100vh;
}
.definition {
  letter-spacing: 2px;
  margin-left: 10vw;
  padding-top: 25vh;
  width: 60vw;

  #pronounciation {
    font-size: 1.5rem;
  }

}
blockquote {
  // background: #f9f9f9;
  border-left: 10px solid #ccc;
  // margin: 10px;
  padding: 10px;
  letter-spacing: 3px;


}

.ux_design {
  margin-top: 10px;
  height: 100vh;
  background-color: #f9f9f9;
}

.ux_definition{
  padding-top: 30vh;
  margin-left: 50vw;
}
.ux_definition blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
.ux_definition blockquote:before{
    color: #ccc;
    content: open-quote;
    font-size: 4em;
    line-height: 0.1em;
    margin-right: 0.25em;
    vertical-align: -0.4em;
  }

.port_pic{
  // background-image: image-url("ErinKimPortfolio.jpg");
  background-image: image-url("prof_pic_maybe.png");
  background-repeat: no-repeat;
  background-size: contain;
  background-position: 75% 0;

  // padding-top: 15rem;

  .intro{
    // margin-top: 150px;
    padding-top: 50vh;
    padding-right: 35%;
    padding-left: 10%;

    color: $black;
    font-size: 1.1rem;
    font-family: sans-serif;
    letter-spacing: 5px;
      a {
        text-decoration: underline;
      }
       b{
      color: $red;
      letter-spacing: 2px;
    }

    h2 {
      // animation: bobble 3s infinite;
      letter-spacing: 7px;
      // margin-top: -250px;
    }

  }
}

#greetings {
  width: 200px;
  margin-bottom: -500px;
  margin-left: 10%;
  margin-top: 150px;
  position: absolute;
}

.hello {
  display: none;
}

.language_list, .skill_list {
  width: 10vw;
}

.languages{
  font-family: sans-serif;
  color: $white;
  border: 2px solid #808080;
  padding: 20px;
  width: 90vw;
  margin: 0vh 5vw 0vh 5vw;
  margin-bottom: 5rem;
  margin-top: 5rem;

}

.languages h2{
  font-family: sans-serif;
  color: $medGrey;
  text-align: center;
  letter-spacing: 5px;

}

.languages_grid{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}
// .language_list{
//   border: 3px solid #808080;
//   border-radius: 50%;
//   width: 130px;
//   height: 130px;
//   text-align: center;
//   line-height: 130px;
//   background-color: #808080;
// }
.skills h2{
  font-family: sans-serif;
  // color: #6ed3cf;
  color: $redTrans;
  text-align: center;
  overflow: hidden;
  letter-spacing: 5px;
}
.skills{
  margin-top: 3rem;
  // background-color: #e3e3e3;
  font-family: sans-serif;
  color: $white;
  border: 2px solid #808080;
  // height: 300px;
  padding: 20px;
  width: 90vw;
  margin: 0vh 5vw 0vh 5vw;

}
.skills_grid{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  // font-family: sans-serif;

}

// .skill_list{
//   border: 2px solid #6ed3cf;
//   border-radius: 50%;
//   width: 150px;
//   height: 150px;
//   text-align: center;
//   line-height: 150px;
//   background-color: #6ed3cf;
//   // margin-bottom: 20px;
// }

.work_sample{
  // margin-top: 50px;
  display: flex;
  flex-direction: column;
  margin: 5vh 5vw 0vh 5vw;
  // justify-content: center;
  h2 {
    color: $medGrey;
  }
}

#project_header {
  text-align: center;
}
.sample_one {
  display: inline-flex;
  justify-content: center;


}
.project_pic {
  background-size: 100%;
  background-repeat: no-repeat;
  width: 35vw;
  height: 280px;
  margin-top: 50px;

  transition-property: all;
  transition-duration: 300ms;
  transition-timing-function: ease-in;
  transition-delay: 300ms;
}

.project_description {
  width: 500px;
  padding-left: 50px;
  color: $medGrey;
}

.project_links {
  color: $medGrey;
  font-size: 1rem;
  margin-top: 50px;
  padding-right: 50px;
  position: absolute;

  a{
    color: $medGrey;
    padding-right: 20px;
  }

  a:hover {
    color: $black;
    border-bottom: 2px solid $black;
    font-size: 1.1rem;

  }
}
 hr {
   width: 70%;
   margin-top: 100px;
 }

#we_robo_care {
  background-image: image-url("we_robo_care.png");

}

#we_robo_care:hover {
  transform: scale(1.2);
}

#seatyourself {
  background-image: image-url("seatyourself.png")
}

#seatyourself:hover {
  transform: scale(1.2);
}

.footer {
  background-color: $greyTrans;
  color: $black;
  height: 50px;
  font-size: 0.7rem;
  margin-top: 100px;

  .footer_message,
  i {
    line-height: 50px;
    letter-spacing: 2px;
    display: flex;
    justify-content: flex-end;
  }

}


.jump_circle{
  position: relative;
  width: 100%;
  height: 100%;
}
.circle{
  position: absolute;
  width: 30px;
  height:30px;
  border-radius: 50%;
  background-color: $redTrans;

  // background-color: rgba(145, 252, 204, 0.82);
}


#hamburger,
#cross {
  display: none;
}

/* responsive breakpoints: @370 and below:*/
@media screen and (max-width: 370px){
  .nav{
    top: 10%;
    right: 10%;
  }

  .jump_circle{
    display: none;
  }

  .footer {
    display: none;
  }

}

@media screen and (max-width: 670px){
  body{
    overflow-x: hidden;
    // width: 100vw;
  }
  .my_info,
  .contact{
      width:100%;
      a {
        padding: 5%;
        overflow-x: visible;
      }

    }
  .nav {
      display: none;
    }
  #hamburger,
  #cross {
    display: block;
  }
  .nav {
    height: auto;
    ul {
      flex-direction: column;
      width: 100%;
      // padding: 5%;
      overflow: scroll;
      margin: 0;
      margin-top: 10%;

    }
    li {
      margin-bottom: 5%;
    &:hover {
      width: 100%;
    }
    }
  }
  .definition {
    padding-top: 15vh;
    width: 70vw;
  }
  .ux_definition{
    margin-left: 5vw;
  }
  .port_pic{
    // background-image: none;
    background-color: $greyTrans;

  }

  .intro{
   text-align: left;
   padding: 5%;
  //  padding-left: 10%;

     h2 {
       margin-left: -50px;
       font-size: 0.8rem;
     }

     p{
       font-size: 0.8rem;
     }
  }

  .language_list, .skill_list {
    width: 20vw;
  }
  .work_sample {
    // width: 70%;
    display: flex;
    justify-content: center;

  }
  .sample_one {
    display: flex;
    flex-direction: column;
    justify-content: center;

    .project_pic {
      width: 90vw;
    }

    .project_description {
      width: 90vw;
    }
  }

  footer {
    font-size: 0.5rem;
  }
}

